--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Project for learning NodeJS",
   "type": "module",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect ./index.js"
+    "start": "nodemon --inspect ./src/index.js",
+    "sass": "node-sass src/resources/scss/ -wro src/public/css/"
   },
   "repository": {
     "type": "git",
@@ -25,9 +26,12 @@
   },
   "homepage": "https://github.com/vutiendat3601/f8blog#readme",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.3"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
+    "node-sass": "^9.0.0",
     "nodemon": "^3.1.4"
   }
 }
