--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "Project for learning NodeJS",
   "type": "module",
-  "main": "./src/index.js",
+  "main": "./src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect ./src/index.js",
-    "sass": "node-sass src/resources/scss/ -wro src/public/css/"
+    "start": "docker compose up -d && nodemon --inspect ./src/main.js",
+    "sass": "node-sass src/resources/scss/ -wro src/public/css/",
+    "prepare": "husky",
+    "prettier": "prettier --write --tab-width 2 --single-quote true --trailing-comma all \"src/**/*.js\""
+  },
+  "lint-staged": {
+    "**/*.js": "prettier --write --ignore-unknown"
   },
   "repository": {
     "type": "git",
@@ -27,11 +32,18 @@
   "homepage": "https://github.com/vutiendat3601/f8blog#readme",
   "dependencies": {
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.3"
+    "express-handlebars": "^7.1.3",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.4.3",
+    "mongoose-delete": "^1.0.2",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.2"
   }
 }
